--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
       rel="stylesheet"
     />
     <style>
+      *,
+      *::before,
+      *::after {
+        box-sizing: border-box;
+      }
       :root {
         --petal: #e8fcfb;
         --warm: #c9f2f0;
@@ -21,6 +26,7 @@
       body {
         margin: 0;
         min-height: 100vh;
+        height: 100vh;
         display: grid;
         place-items: center;
         background:
@@ -31,11 +37,12 @@
         color: var(--ink);
         font-family: "Playpen Sans", sans-serif;
         padding: 32px 16px;
+        overflow: hidden;
       }
 
       .card {
         width: 720px;
-        height: 520px;
+        height: min(520px, calc(100vh - 64px));
         max-width: 92vw;
         max-height: 92vh;
         background: transparent;
@@ -53,10 +60,12 @@
 
       .step {
         display: none;
+        position: relative;
         flex-direction: column;
         gap: 18px;
         align-items: center;
         justify-content: space-between;
+        padding-top: 240px;
         height: 100%;
       }
 
@@ -77,7 +86,12 @@
       }
 
       .gif {
-        width: min(230px, 60vw);
+        position: absolute;
+        top: 0;
+        left: 50%;
+        transform: translateX(-50%);
+        width: min(330px, 60vw);
+        max-height: 220px;
         height: auto;
       }
 
@@ -124,6 +138,48 @@
       button:active {
         transform: translateY(0);
       }
+
+      @media (max-width: 430px) {
+        body {
+          padding: 16px 12px;
+        }
+
+        .card {
+          width: min(390px, 92vw);
+          height: min(760px, calc(100vh - 32px));
+          padding: 32px 20px;
+        }
+
+        .step {
+          justify-content: center;
+          padding-top: 0;
+          gap: 14px;
+        }
+
+        .gif {
+          position: static;
+          transform: none;
+          width: min(300px, 78vw);
+          max-height: 180px;
+        }
+
+        h1 {
+          font-size: clamp(24px, 7vw, 34px);
+        }
+
+        p {
+          font-size: clamp(14px, 3.8vw, 16px);
+        }
+
+        .actions {
+          margin-top: 0;
+        }
+
+        button {
+          padding: 10px 22px;
+          font-size: 15px;
+        }
+      }
     </style>
   </head>
   <body>
@@ -149,7 +205,8 @@
           <img class="gif" src="gifs/gif2.gif" alt="Sweet surprise" />
           <div class="content">
             <h1>
-              Malapit na Febuary 14 :0000
+              Malapit na February 14!
+              <br> amblis noh? :000
             </h1>
             <br>
             <div class="actions">
@@ -164,7 +221,7 @@
           <img class="gif" src="gifs/gif3.gif" alt="Soft hearts" />
           <div class="content">
             <h1>
-              And I just want to ask you if...
+              And I just want to ask you...
             </h1>
             <br>
             <div class="actions">
